--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">CoHost</a>
+	     <a class="navbar-brand" href="index.html">SuiSense</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -66,6 +66,98 @@
    <div id="wtEmbedCode"><script type="text/javascript" id="embedded_forum" iframe width=600 height=1000 src="https://adithyasp.discussion.community/js/mb/embed.js"></script>
    <noscript><a href="https://adithyasp.discussion.community/">Connect With Therapists!</a></noscript></div>
    <!--End Website Toolbox Forum Embed Code-->
+
+   <section class="ftco-section services-section bg-light">
+         <div class="container">
+           <div class="row justify-content-center mb-5 pb-3">
+             <div class="col-md-7 text-center heading-section ftco-animate">
+               <h2 class="mb-4">Therapists</h2>
+               <p>A collection of therapists that are here to help!</p>
+             </div>
+           </div>
+           <div class="row">
+             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+               <div class="media block-6 services d-flex align-items-center">
+                 <div class="icon d-flex align-items-center justify-content-center order-md-last">
+                   <span class="flaticon-cloud"></span>
+                 </div>
+                 <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
+                   <h3 class="heading">Adithya Peruvemba</h3>
+                   <p class="mb-0">Establishes positive, trusting rapport with patients.
+                     Diagnoses and treats mental health disorders.
+                     Creates individualized treatment plans according to patient needs and circumstances.
+                     Meets with patients regularly to provide counseling, treatment and adjust treatment plans as necessary.
+                     Conducts ongoing assessments of patient progress.
+                     Involves and advises family members when appropriate.
+                     Refers patients to outside specialists or agencies when necessary.
+                     Maintains thorough records of patient meetings and progress.
+                     Follows all safety protocols and maintains client confidentiality.
+                     Contributes to practice by accomplishing related tasks as needed.
+                   </p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+               <div class="media block-6 services d-flex align-items-center">
+                 <div class="icon d-flex align-items-center justify-content-center">
+                   <span class="flaticon-server"></span>
+                 </div>
+                 <div class="media-body pl-4">
+                   <h3 class="heading">Daily Backups</h3>
+                   <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+               <div class="media block-6 services d-flex align-items-center">
+                 <div class="icon d-flex align-items-center justify-content-center order-md-last">
+                   <span class="flaticon-customer-service"></span>
+                 </div>
+                 <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
+                   <h3 class="heading">Technical Services</h3>
+                   <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+               <div class="media block-6 services d-flex align-items-center">
+                 <div class="icon d-flex align-items-center justify-content-center">
+                   <span class="flaticon-life-insurance"></span>
+                 </div>
+                 <div class="media-body pl-4">
+                   <h3 class="heading">Secure and Reliable</h3>
+                   <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                 </div>
+               </div>
+             </div>
+             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+               <div class="media block-6 services d-flex align-items-center">
+                 <div class="icon d-flex align-items-center justify-content-center order-md-last">
+                   <span class="flaticon-cloud-computing"></span>
+                 </div>
+                 <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
+                   <h3 class="heading">DNS Control</h3>
+                   <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                 </div>s
+               </div>
+             </div>
+             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+               <div class="media block-6 services d-flex align-items-center">
+                 <div class="icon d-flex align-items-center justify-content-center">
+                   <span class="flaticon-settings"></span>
+                 </div>
+                 <div class="media-body pl-4">
+                   <h3 class="heading">24/7 Support</h3>
+                   <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+       </section>
+
+
+
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
