--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
 	      	<img class="one-third js-fullheight align-self-end order-md-last img-fluid" src="images/undraw_pair_programming_njlp.svg" alt="">
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 	        	<div class="text mt-5">
-	        		<span class="subheading">Isometric Hosting</span>
-	            <h1 class="mb-3"><span>Design,</span> <span>Development,</span> <span>Hosting</span></h1>
-	            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	            <h1 class="mb-3"><span>SuiSense</span></h1>
+	            <p>Using NLP to distinguish suicidal messages and provide personalized support.</p>
 	            <p><a href="#" class="btn btn-primary px-4 py-3">Get in touch</a></p>
 	          </div>
 	        </div>
