--- a/index.html
+++ b/index.html
@@ -187,7 +187,6 @@
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section heading-section-white ftco-animate">
-            <span class="subheading">More than 12,000 websites trusted hosted</span>
           </div>
         </div>
     		<div class="row justify-content-center">
@@ -196,32 +195,38 @@
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="12000">0</strong>
-		                <span>CMS Installation</span>
+                    <strong class="number" data-number="800000">0</strong>
+		                <span>people accross the globe lose their life every year due to suicide. </span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="100">0</strong>
-		                <span>Awards Won</span>
+                    <strong class="number" data-number="85">0</strong>
+		                <span>percent of people that seek treatment for major depression are treated successfully.</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="10000">0</strong>
-		                <span>Registered Domains</span>
+		                <strong class="number" data-number="50">0</strong>
+		                <span>percent of Americans experiencing major depression receive treatment. </span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18 text-center">
 		              <div class="text">
-		                <strong class="number" data-number="9000">0</strong>
-		                <span>Satisfied Customers</span>
+                    <strong class="number" data-number="10">0</strong>
+                    <span>percent of people in the United States have considered suicide.</span>
+		              </div>
+		            </div>
+		          </div>
+		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
+		            <div class="block-18 text-center">
+		              <div class="text">
 		              </div>
 		            </div>
 		          </div>
