--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Why Choose Us</h2>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+            <h2 class="mb-4">Our Mission</h2>
           </div>
         </div>
         <div class="row">
@@ -119,8 +118,8 @@
             		<span class="flaticon-cloud"></span>
             	</div>
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
-                <h3 class="heading">Super Fast Server</h3>
-                <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">The Problem</h3>
+                <p class="mb-0">Suicide is a major issue present in our world currently. It takes the lives of thousands of people everyday, and often times it's because no one is there to help.
               </div>
             </div>
           </div>
@@ -130,8 +129,8 @@
             		<span class="flaticon-server"></span>
             	</div>
               <div class="media-body pl-4">
-                <h3 class="heading">Daily Backups</h3>
-                <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Causes</h3>
+                <p class="mb-0">Those that consider suicide likely experience a deep feeling of hopelessness. Depression, the root of suicide is widely considered to be a key risk factor. </p>
               </div>
             </div>
           </div>
@@ -141,8 +140,8 @@
             		<span class="flaticon-customer-service"></span>
             	</div>
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
-                <h3 class="heading">Technical Services</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Friends</h3>
+                <p> People facing depression typically tend to resort to their friends first when seeking assistance. Friends are people that they can trust and are comfortable with allowing for a safe environment. </p>
               </div>
             </div>
           </div>
@@ -152,30 +151,22 @@
             		<span class="flaticon-life-insurance"></span>
             	</div>
               <div class="media-body pl-4">
-                <h3 class="heading">Secure and Reliable</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Early Detection</h3>
+                <p>It is very important that messages hinting at suicidal intentions are dectected right away. If noticed early, proper assistance can be provided in order to help those dealing with major depression.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-flex align-items-center">
-            	<div class="icon d-flex align-items-center justify-content-center order-md-last">
             		<span class="flaticon-cloud-computing"></span>
             	</div>
               <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-right">
-                <h3 class="heading">DNS Control</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
               </div>s
             </div>
           </div>
           <div class="col-md-6 d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services d-flex align-items-center">
-            	<div class="icon d-flex align-items-center justify-content-center">
             		<span class="flaticon-settings"></span>
             	</div>
               <div class="media-body pl-4">
-                <h3 class="heading">24/7 Support</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
               </div>
             </div>
           </div>
