linked with python anywhere

--- a/analysis.html
+++ b/analysis.html
@@ -129,6 +129,8 @@
     }
 </script>
 
+<embed src="http://suisense.pythonanywhere.com/" style="width:2500px; height: 1500px;">
+
     <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
