fixed team photos

--- a/index.html
+++ b/index.html
@@ -261,28 +261,28 @@
         <div class="row">
           <div class="col-sm">
             <div class="member" data-aos="fade-up">
-              <div class="pic"><img src="/Users/viraajreddi/Desktop/SameHome/suiSenseTeam/ayaanpic.jpg" alt=""></div>
+              <div class="pic"><img src="suiSenseTeam/ayaanpic.jpg" alt=""></div>
               <h4>Ayaan Haque</h4>
               <span>Frontend, Fullstack</span>
             </div>
           </div>
           <div class="col-sm">
             <div class="member" data-aos="fade-up" data-aos-delay="200" justify-content-center text-center>
-              <div class="pic"><img src="/Users/viraajreddi/Desktop/SameHome/suiSenseTeam/vijarjpic.png" alt=""></div>
+              <div class="pic"><img src="suiSenseTeam/vijarjpic.png" alt=""></div>
               <h4>Viraaj Reddi</h4>
               <span>Backend, Fullstack</span>
             </div>
           </div>
           <div class="col-sm">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="/Users/viraajreddi/Desktop/SameHome/suiSenseTeam/adithyapic.png" alt=""></div>
+              <div class="pic"><img src="suiSenseTeam/adithyapic.png" alt=""></div>
               <h5>Adithya Peruvemba</h5>
               <span>Backend, Fullstack</span>
             </div>
           </div>
           <div class="col-sm">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="/Users/viraajreddi/Desktop/SameHome/suiSenseTeam/vijarjpic.png" class="img-circle" alt=""></div>
+              <div class="pic"><img src="suiSenseTeam/vijarjpic.png" class="img-circle" alt=""></div>
               <h4>Ishaan Bhandari</h4>
               <span>Backend, Fullstack</span>
             </div>
