fixed nav bar and ishaan picture

--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,11 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
             <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
-	          <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
+           <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
+           <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
+           <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+           <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+           <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -144,12 +143,12 @@
             <div class="ftco-footer-widget mb-4 ml-md-5">
               <h2 class="ftco-heading-2">Unseful Links</h2>
               <ul class="list-unstyled">
-                <li><a href="index.html" class="py-2 d-block">Home</a></li>
-                <li><a href="about.html" class="py-2 d-block">About</a></li>
-                <li><a href="analysis.html" class="py-2 d-block">Analysis</a></li>
-                <li><a href="pairings.html" class="py-2 d-block">Pairings</a></li>
-                <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
-                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
+                <li><a href="#" class="py-2 d-block">Servers</a></li>
+                <li><a href="#" class="py-2 d-block">Windos Hosting</a></li>
+                <li><a href="#" class="py-2 d-block">Cloud Hosting</a></li>
+                <li><a href="#" class="py-2 d-block">OS Servers</a></li>
+                <li><a href="#" class="py-2 d-block">Linux Servers</a></li>
+                <li><a href="#" class="py-2 d-block">Policy</a></li>
               </ul>
             </div>
           </div>
@@ -157,12 +156,11 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Navigational</h2>
               <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Home</a></li>
-                <li><a href="#" class="py-2 d-block">Domain</a></li>
-                <li><a href="#" class="py-2 d-block">Hosting</a></li>
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Blog</a></li>
-                <li><a href="#" class="py-2 d-block">Contact</a></li>
+                <li><a href="index.html" class="py-2 d-block">Home</a></li>
+                <li><a href="analysis.html" class="py-2 d-block">Analysis</a></li>
+                <li><a href="pairings.html" class="py-2 d-block">Pairings</a></li>
+                <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
+                <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
           </div>
