--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="analysis.html" class="nav-link">Analysis</a></li>
 	          <li class="nav-item"><a class="nav-link" href="pairings.html">Pairings</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
@@ -263,28 +262,28 @@
             <div class="member" data-aos="fade-up">
               <div class="pic"><img src="suiSenseTeam/ayaanpic.jpg" alt=""></div>
               <h4>Ayaan Haque</h4>
-              <span>Frontend, Fullstack</span>
+              <span>Backend, Fullstack</span>
             </div>
           </div>
           <div class="col-sm">
             <div class="member" data-aos="fade-up" data-aos-delay="200" justify-content-center text-center>
               <div class="pic"><img src="suiSenseTeam/vijarjpic.png" alt=""></div>
               <h4>Viraaj Reddi</h4>
-              <span>Backend, Fullstack</span>
+              <span>Frontend, Fullstack</span>
             </div>
           </div>
           <div class="col-sm">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
               <div class="pic"><img src="suiSenseTeam/adithyapic.png" alt=""></div>
               <h5>Adithya Peruvemba</h5>
-              <span>Backend, Fullstack</span>
+              <span>Frontend, UI Developer</span>
             </div>
           </div>
           <div class="col-sm">
             <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="pic"><img src="suiSenseTeam/vijarjpic.png" class="img-circle" alt=""></div>
+              <div class="pic"><img src="suiSenseTeam/ishaanpic.jpg" class="img-circle" alt=""></div>
               <h4>Ishaan Bhandari</h4>
-              <span>Backend, Fullstack</span>
+              <span>UI Developer</span>
             </div>
           </div>
         </div>
@@ -408,7 +407,6 @@
               <h2 class="ftco-heading-2">Navigational</h2>
               <ul class="list-unstyled">
                 <li><a href="index.html" class="py-2 d-block">Home</a></li>
-                <li><a href="about.html" class="py-2 d-block">About</a></li>
                 <li><a href="analysis.html" class="py-2 d-block">Analysis</a></li>
                 <li><a href="pairings.html" class="py-2 d-block">Pairings</a></li>
                 <li><a href="blog.html" class="py-2 d-block">Blog</a></li>
