--- a/pairings.html
+++ b/pairings.html
@@ -61,36 +61,14 @@
       </div>
     </div>
 
-    <section class="ftco-section">
-    	<div class="container">
-        <div class="row justify-content-center mb-5">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Therapist:</h2>
-            <p>Please enter your information to be paired with someone who requires your services. </p>
-          </div>
-        </div>
-    	</div>
-      <div class="contact-form">
-      <div id="errormessage"></div>
-      <head>
-      <center>
-        <label>Please upload a profile image of yourself:</label>
-        </center>
-        <center>
-  <label for="file-upload" class="custom-file-upload">
-    <i class="fa fa-cloud-upload"></i> Custom Upload<br>
-</label>
-<input id="file-upload" type="file"/>
-</center>
-    </section>
 
     <section> <!-- copied code from python anywhere form -->
-
+<section class="ftco-section bg-light">
       <div class="container">
         <div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-4">Therapist:</h2>
-            <p>Enter your information to be paired with someone who requires your services. </p>
+            <h2 class="mb-4"> Therapist:</h2>
+            <p>Enter your information to be paired with someone who requires your services.   </p>
           </div>
         </div>
       </div>
@@ -134,10 +112,19 @@
             <input type="text" class="form-control" placeholder="Your Email">
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="Subject">
+            <input type="text" class="form-control" placeholder="Your Phone Number">
           </div>
           <div class="form-group">
-            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+            <input type="text" class="form-control" placeholder="Your Office Address">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Your Availability Hours (Dates/Times)">
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Therapist Type">
+          </div>
+          <div class="form-group">
+            <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
           </div>
           <div class="form-group">
             <input type="submit" value="Submit Form" class="btn btn-primary py-3 px-5">
@@ -149,6 +136,7 @@
   </center>
 
 
+</section>
 
     </section>
 
