--- a/analysis.html
+++ b/analysis.html
@@ -128,9 +128,21 @@
       await worker.terminate();
     }
 </script>
-<center>
-<embed src="http://suisense.pythonanywhere.com/" style="width:800px; height: 650px;">
-</center
+
+  <section class="ftco-section">
+    <div class="container">
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-7 text-center heading-section ftco-animate">
+          <center>
+          <h2 class="mb-4">Analyze your text</h2>
+          <embed src="http://suisense.pythonanywhere.com/" style="width:800px; height: 600px;">
+          </center>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
     <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
